--- a/code/style.css
+++ b/code/style.css
@@ -3,29 +3,24 @@ html {
   color: rgb(7, 6, 6);
 }
 
+body {
+  margin: 0;
+  padding: 0;
+}
 
 .title-header {
-  display: grid;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding: 1rem;
-  grid-template-columns: 1fr 3fr 1fr;
   gap: 2rem;
 }
 
-ul {
-  margin: 0;
-  padding: 4px;
-  
-}
-
-li {
-  float: right;
-  display: inline;
-  padding: 4px
-}
 
 
 .title {
-  font-size: 25px;
+  font-size: 50px;
+  font-family: Georgia;
 }
 
 .logo-container {
@@ -37,28 +32,160 @@ li {
   justify-self: center;
 }
 
-.navigation {
-   font-size: 25px;
+.container {
+  max-width: 1050px;
+  width: 90%;
+  margin: auto;
 }
 
-.header {
+.navbar {
   width: 100%;
+  box-shadow: 0 1px 4px rgb(146 161 176 / 15%);
+  display: flex;
 }
+
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 62px;
+}
+
+.navbar .menu-items {
+  display: flex;
+}
+
+.navbar .nav-container li {
+  list-style: none;
+}
+
+.navbar .nav-container a {
+  text-decoration: none;
+  color: #0e2431;
+  font-weight: 500;
+  font-size: 1.2rem;
+  padding: 0.7rem;
+}
+
+.navbar .nav-container a:hover{
+    font-weight: bolder;
+}
+
+.nav-container {
+  display: block;
+  position: relative;
+  height: 60px;
+}
+
+.nav-container .checkbox {
+  position: absolute;
+  display: block;
+  height: 32px;
+  width: 32px;
+  top: 20px;
+  left: 20px;
+  z-index: 5;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.nav-container .hamburger-lines {
+  display: block;
+  height: 26px;
+  width: 32px;
+  position: absolute;
+  top: 17px;
+  left: 20px;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.nav-container .hamburger-lines .line {
+  display: block;
+  height: 4px;
+  width: 100%;
+  border-radius: 10px;
+  background: #0e2431;
+}
+
+.nav-container .hamburger-lines .line1 {
+  transform-origin: 0% 0%;
+  transition: transform 0.4s ease-in-out;
+}
+
+.nav-container .hamburger-lines .line2 {
+  transition: transform 0.2s ease-in-out;
+}
+
+.nav-container .hamburger-lines .line3 {
+  transform-origin: 0% 100%;
+  transition: transform 0.4s ease-in-out;
+}
+
+.navbar .menu-items {
+  padding-top: 120px;
+  box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+  height: 100vh;
+  width: 100%;
+  transform: translate(150%);
+  display: flex;
+  flex-direction: column;
+  margin-left: -40px;
+  padding-left: 50px;
+  transition: transform 0.5s ease-in-out;
+  text-align: center;
+}
+
+.navbar .menu-items li {
+  margin-bottom: 1.2rem;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.logo {
+  position: absolute;
+  top: 5px;
+  right: 15px;
+  font-size: 1.2rem;
+  color: #0e2431;
+}
+
+.nav-container input[type="checkbox"]:checked ~ .menu-items {
+  transform: translateX(0);
+}
+
+.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
+  transform: rotate(45deg);
+}
+
+.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
+  transform: scaleY(0);
+}
+
+.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
+  transform: rotate(-45deg);
+}
+
+.nav-container input[type="checkbox"]:checked ~ .logo{
+  display: none;
+}
+ 
+
+
+
 
 .big-news {
   display: flex;
   flex-wrap: wrap;
-  background-color: pink;
+  background-color: lightsalmon;
   justify-content: center;
-  align-items: center;
-  align-content: center;
   border: 2px solid;
   padding: 2rem;
   gap: 2rem;
   margin: 1rem;
-  box-sizing: border-box;
-  max-width: 100%;
-  height: auto;
+ 
 }
 
 .cats {
@@ -67,43 +194,71 @@ li {
   align-content: center;
 }
 .cat-image {
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  object-fit: cover;
 }
 
-
+.big-news {
+  font-size: medium;
+}
 
 .small-news {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+ 
+  grid-template-columns: repeat(1fr);
   padding: 2rem;
-  gap: 2rem;
+  gap: 20px;
   align-content: center;
   justify-content: center;
-  
+  margin: 2rem;
+  align-items: center;
 
 }
 
-.article-one, .article-two, .article-three, .article-four, .article-five, .article-six, .article-seven, .article-eight {
+.small-news-article {
   border: 2px solid;
-  padding: 1rem;
-  gap: 1rem;
-  object-fit: cover;
-  flex-direction: column;
-  flex-flow: row-wrap;
+  padding: 2rem;
+  gap: 2rem;
+  text-align: center;
+  height: 350px; 
+  background-color: lightblue;
 }
+
+.small-news-article img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.small-news-article:hover {
+  color:red
+}
+
+
+
 
 @media (min-width: 767px) and (max-width: 991px) {
- 
-  body {
-    width: auto;
-  }
-  .small-news {
+ body {
+  background: lightseagreen ;
+}
+  
+  .navbar {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+
+  }
+
+  .menu-items {
+    display: block
+  }
+
+  .hamburger-lines {
+    display: none;
+  }
+
+  .small-news {
+    grid-template-columns: repeat(2, 2fr);
     justify-content: space-around;
-    width: 80%
   }
 
  
@@ -113,16 +268,27 @@ li {
 
 @media (min-width: 992px) {
   
-  body {
-    width: auto;
+ body {
+  background: lightgreen;
+ }
+ 
+.navbar {
+  display: flex;
+  flex-direction: row;
+}
+
+  .menu-items {
+    display: block
+  }
+
+  .hamburger-lines {
+    display: none;
   }
   
   .small-news {
-    flex-direction: row ;
-    flex-wrap: wrap;
+    grid-template-columns: repeat(4, 2fr);
     align-items: center;
-    object-fit: scale-down;
-    align-content: space-between;
+    justify-content: space-around;
   }
   
   }
