--- a/code/style.css
+++ b/code/style.css
@@ -60,8 +60,11 @@ h1 h2 h3 {
 }
 
 .menu li {
+  display: flex;
   padding: 5px 40px;
   list-style: none;
+  align-self: center;
+  font-size:25px;
 }
 
 .menu li:hover {
@@ -80,7 +83,7 @@ h1 h2 h3 {
   position: absolute;
   display: none;
   border-radius: 8px;
-  top: 50px;
+  top: 35px;
   z-index: 999;
 }
 
@@ -92,6 +95,8 @@ h1 h2 h3 {
   padding: 0.5em 1em;
   width: 8em;
   text-align: center;
+  justify-content: center;  
+  
 }
 
 .dropdown li:hover {
@@ -121,6 +126,11 @@ h1 h2 h3 {
     left: 0;
     text-align: center;
     padding: 17px 0;
+
+  }
+  .menu li{
+    justify-content: center;
+    
   }
   .menu li:hover {
     display: inline-block;
@@ -136,12 +146,13 @@ h1 h2 h3 {
   .hamburger {
     display: block;
   }
+
   .dropdown {
     left: 50%;
     top: 30px;
     transform: translateX(20%);
   }
-
+   
   .navbar {
     position: relative;
     z-index: 999;
@@ -163,8 +174,8 @@ h1 h2 h3 {
 
 .display-date {
   font-size: 30px;
-  margin: 30px 400px;
-  text-align: end;
+  margin: 30px 100px;
+  text-align: center;
 }
 
 .red-dot {
@@ -175,6 +186,7 @@ h1 h2 h3 {
   background-color: red;
   margin-right: 10px;
   animation: blink 1.5s infinite;
+  align-self: center;
 }
 
 @keyframes blink {
@@ -192,16 +204,12 @@ h1 h2 h3 {
 .big-news-box a {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  margin: 10px 350px 50px 350px;
-  height: 800px;
+  margin: 10px 50px 50px 50px;
+  height: 800px; 
   position: relative;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   text-decoration: none;
   color: white;
-
-
-  
-  
 }
 
 .big-news-box a:visited {
@@ -217,6 +225,7 @@ h1 h2 h3 {
   width: 100%;
   height: 800px;
   grid-column: 1/3;
+  object-fit: cover;
   
 }
 
@@ -251,7 +260,7 @@ h1 h2 h3 {
 
 .grid-container {
   display: grid;
-  margin: 100px 300px;
+  margin: 100px 100px;
 }
 
 .news-grid {
@@ -286,12 +295,13 @@ h1 h2 h3 {
 
 .news-item-image {
   width: 100%;
-  height: 350px;
+  height: 300px;
   object-fit: cover;
 }
 
 .news-item-caption {
   font-size: 25px;
+  font-weight: 400;
   width: 100%;
   overflow: hidden;
   font-weight: bold;
@@ -300,7 +310,8 @@ h1 h2 h3 {
 
 .news-item-text {
   width: 100%;
-  font-size: 20px;
+  font-size: 25px;
+  font-weight: 300;
   margin-top: 10px;
   color:black;
 }
@@ -328,6 +339,14 @@ h1 h2 h3 {
   .big-news-box a{
     grid-template-rows: 50% 50%;
     margin:50px;
+  }
+
+  .big-news-image {
+    width: 100%;
+    height: 100%;
+    grid-column: 1/3;
+    grid-row:1/3;
+    
   }
 
   .big-news-title {
