--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,209 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  margin: auto;
+  background: rgb(169, 190, 170);
+  color: black;
+  font-family: muli, sans-serif;
+}
+
+header {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  background-color: white;
+  max-height: 200px;
+}
+
+.horse {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+h1 {
+  color: black;
+  text-align: center;
+  font-size: xxx-large;
+  font-style: oblique;
+}
+
+.logo {
+  grid-row-start: 1;
+  grid-column-start: 1;
+  grid-row-end: span 3;
+}
+
+.site-title {
+  grid-row-start: 1;
+  grid-column-start: 2;
+  grid-column-end: span 4;
+}
+
+.nav {
+  grid-row-start: 2;
+  grid-column-start: 2;
+  grid-column-end: span 3;
+}
+
+.box-2 a {
+  text-decoration: none;
+  color: black;
+  margin: auto;
+  width: 200px;
+  margin-top: 20px;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+a:hover {
+  background: gold;
+  border-radius: 100px;
+}
+
+.footer {
+  background-color: rgb(183, 182, 184);
+  font-size: 24px;
+  width: 100%;
+  padding-bottom: 10px;
+  font-family: gillsans;
+  position: fixed;
+  bottom: -25px;
+  color: rgb(255, 255, 255);
+  opacity: 0.7;
+  text-align: center;
+}
+
+.box-1,
+.box-2 {
+  text-align: center;
+  text-decoration: none;
+}
+
+.nav a {
+  color: black;
+  padding: 6px;
+  text-decoration: none;
+}
+
+.big-news {
+  display: flex;
+  flex-direction: column;
+  background-color: #f1f1f1;
+  align-items: center;
+  margin: 10px;
+  margin-top: 50px;
+  padding: 15px;
+  padding-bottom: 20px;
+}
+
+.img-kultur {
+  max-width: 500px;
+  max-height: 100%;
+}
+
+/*
+  .big-news > div {
+    background-color: #f1f1f1;
+    margin: 25px;
+    width: 500px;
+    padding: 10px;
+    font-size: 20px;
+    align-self: center;
+    text-align: center;
+    flex: 25rem;
+  }
+*/
+.flex-container {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+
+.flex-container img {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.grid {
+  display: grid;
+  gap: 20px;
+  margin: 10px;
+  margin-top: 30px;
+  margin-bottom: 80px;
+}
+
+h6 {
+  font-size: large;
+  font-weight: 400;
+}
+h2 {
+  font-size: small;
+  top: 30px;
+  text-align: center;
+  font-style: italic;
+  font-weight: 50;
+}
+h5 {
+  font-size: medium;
+  font-family: gillsans;
+}
+
+/* Tablet */
+@media (min-width: 668px) and (max-width: 1023px) {
+  .grid {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .big-news {
+    flex-direction: row;
+  }
+
+  .site-title {
+    grid-column-start: 1;
+    grid-row-start: 1;
+  }
+
+  .logo {
+    max-height: 150px;
+  }
+  .nav {
+    grid-row-start: 2;
+    grid-column-start: 2;
+  }
+}
+
+/* Desktop */
+@media (min-width: 1024px) {
+  .logo {
+    grid-column-start: 1;
+    grid-column-end: span 2;
+    max-height: 150px;
+  }
+
+  .header {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+
+  .nav {
+    grid-column-start: 4;
+  }
+
+  .big-news {
+    flex-direction: row;
+  }
+
+  .site-title {
+    grid-column-start: 2;
+  }
+
+  .grid {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
 }
