--- a/code/style.css
+++ b/code/style.css
@@ -191,6 +191,9 @@ img.arrangemang, img.rose, img.daisy, img.blue, img.pink {
   margin-left: auto;
   margin-right: auto;
   margin-top: 5px;
+  box-shadow:1px 1px 5px #333; 
+  -webkit-box-shadow:1px 1px 5px #333;
+  -moz-box-shadow:1px 1px 5px #333;
 }
 
 article {
