fixed padding for desktop

--- a/code/style.css
+++ b/code/style.css
@@ -84,7 +84,10 @@ header a {
     padding: 5px;
     color:rgb(0, 146, 114);
     display: block;
+    font-size: 20px;
+    justify-content: center;
   }
+  
   
 }
 
@@ -124,6 +127,8 @@ header a {
     grid-template-rows: repeat(5);
     gap: 15px;
     justify-content: center;
+    padding: 0px 150px 0px 150px;
+    
 
   }
 
